--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Software Engineer</p>
+                <p>Aspiring Software Engineer</p>
                 <h1>Hi, I'm <span>Shuvadipta</span><br>Das from India</h1>
             </div>
         </div>
