--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p><br>I am a coding enthusiast and have a passion for computer science.<br><br>Currently learning to be a software engineer alongside gathering knowledge on various technologies.</p>
-                    <div class="tab-titles">
+                    <p><br>I am a coding enthusiast and have a passion for computer science.<br><br>Currently learning to be a software engineer alongside gathering knowledge on various technologies.<br></p>
+                    <a href=""><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=25&pause=1000&color=E0BE96&center=true&vCenter=true&width=500&lines=Shuvadipta+Das;Aspiring+Software+Engineer;Learning+Full+Stack+Web+Dev;Passion+For+Computer+Science;Hope+you+are+having+a+nice+day!😁" alt="Typing SVG" /></a>
+                  <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
