--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span> </span><br> </li>
+                            <li><span>Open Source Contributor</span><br>Contributor at GSSoC '23</li>
                             <li><span> </span><br> </li>
                             <li><span> </span><br> </li>
                         </ul>
