changed design of scroll to top

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <p>Copyright @ Shuvadipta Das.</p>
     </div>
 </div>
-<a href="#" onclick="topFunction()" id="myBtn" class="myBtn hidden"><i class="fa-solid fa-upload"></i></a>
+<a href="#" onclick="topFunction()" id="myBtn" class="myBtn hidden">&#x1F815;</a>
 
     <script src="script.js"></script>
     <!-- -------contact form begin---------- -->
