Added Halo Project

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
             <div class="work">
                 <img src="images/work3.png">
                 <div class="layer">
-                    <h3>Google Drive Clone</h3>
-                    <p>This is a basic clone of Google Drive Home</p>
-                    <a href="https://d3e7nl.csb.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Halo Master Chief Webpage</h3>
+                    <p>This is a functional webpage of the famous game character Master Chief</p>
+                    <a href="https://5h0ov.github.io/Halo-Master-Chief-Page/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
