Added Python Skill.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
                     </p>
                     <a href="https://github.com/5h0ov/C-Programming-Practical-Assignments-NSEC/tree/main" target="_blank">Learn More</a>
                 </div>
+                <div>
+                    <i class="fa-brands fa-python"></i>
+                    <h2>Python</h2>
+                    <p>Fairly Knowledgable in Python. I have done many assignments in my college lab. Find about it below! 
+                    </p>
+                    <a href="https://github.com/5h0ov/Python-Assignment-NSEC/tree/main" target="_blank">Learn More</a>
+                </div>
             </div>
         </div>
     </div>
