Small Modification to Learn More

--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
                     <h2>Web Development</h2>
                     <p>Learning HTML,CSS & Js and planning to go to Backend soon! 
                     </p>
-                    <a href="#">Learn More</a>
+                    <a href="https://github.com/5h0ov?tab=repositories"><u>Learn More</u></a>
                 </div>
                 <div>
                     <i class="fa-solid fa-c"></i>
                     <h2>C Programming</h2>
                     <p>Highly knowledgable in C Programming. I have done many programs in my college. Find about it below! 
                     </p>
-                    <a href="https://github.com/5h0ov/C-Programming-Practical-Assignments-NSEC/tree/main" target="_blank">Learn More</a>
+                    <a href="https://github.com/5h0ov/C-Programming-Practical-Assignments-NSEC/tree/main" target="_blank"><u>Learn More</u></a>
                 </div>
                 <div>
                     <i class="fa-brands fa-python"></i>
                     <h2>Python</h2>
                     <p>Fairly Knowledgable in Python. I have done many assignments in my college lab. Find about it below! 
                     </p>
-                    <a href="https://github.com/5h0ov/Python-Assignment-NSEC/tree/main" target="_blank">Learn More</a>
+                    <a href="https://github.com/5h0ov/Python-Assignment-NSEC/tree/main" target="_blank"><u>Learn More</u></a>
                 </div>
             </div>
         </div>
