portfolio -> my work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#work">My Work</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-times" onclick="closemenu()"></i>
                 </ul>
@@ -98,8 +98,8 @@
             </div>
         </div>
     </div>
-<!-- -----------portfolio---------- -->
-<div id="portfolio">
+<!-- -----------my work---------- -->
+<div id="work">
     <div class="container">
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
