added 2 more work

--- a/index.html
+++ b/index.html
@@ -135,6 +135,22 @@
                     <a href="https://5h0ov.github.io/Halo-Master-Chief-Page/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
+            <div class="work">
+                <img src="images/todo.png">
+                <div class="layer">
+                    <h3>ShoobDo - A ToDo List React App</h3>
+                    <p>ShoobDo is a simple ToDo List React App using basic concepts of states and props.</p>
+                    <a href="https://github.com/5h0ov/ShoobDo" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/X">
+                <div class="layer">
+                    <h3>X</h3>
+                    <p>X</p>
+                    <a href="X" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
         </div>
         <a href="https://github.com/5h0ov?tab=repositories" target="_blank", class="btn">See More</a>
     </div>
