pushing minor changes

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Web Development</span><br>Web App Development</li>
-                            <li><span>C Programming</span><br>Programming For Problem Solving</li>
+                            <li><span>Full Stack Web Development using MERN</span><br>Web App Development</li>
+                            <li><span>C/C++ Programming</span><br>Programming For Problem Solving</li>
                             <li><span>Teamwork</span><br>Ability to perform well in a team</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Open Source Contributor</span><br>Contributor at GSSoC '23</li>
+                            <li><span>Open Source Contributor</span><br>Rank 49 Contributor at GSSoC '23</li>
                             <li><span> </span><br> </li>
                             <li><span> </span><br> </li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2022-Current</span><br>B.Tech In IT from Netaji Subhash Engineering College</li>
+                            <li><span>2022-2026</span><br>B.Tech In IT from Netaji Subhash Engineering College</li>
                             <li><span>2022</span><br>Class 12 from Garden High School</li>
                         </ul>
                     </div>
@@ -80,7 +80,7 @@
 <!-- --------------services-------- -->
     <div id="services">
         <div class="container">
-            <h1 class="sub-title">My Services</h1>
+            <h1 class="sub-title">My Skills</h1>
             <div class="services-list">
                 <div>
                     <i class="fas fa-code"></i>
@@ -102,6 +102,20 @@
                     <p>Fairly Knowledgable in Python. I have done many assignments in my college lab. Find about it below! 
                     </p>
                     <a href="https://github.com/5h0ov/Python-Assignment-NSEC/tree/main" target="_blank"><u>Learn More</u></a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-react"></i>
+                    <h2>Reactjs</h2>
+                    <p>Learning Reactjs and planning to make some impactful projects! 
+                    </p>
+                    <a href="https://github.com/5h0ov?tab=repositories"><u>Learn More</u></a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-node"></i>
+                    <h2>Nodejs</h2>
+                    <p>Making projects related to backend and learning key features of Nodejs! 
+                    </p>
+                    <a href="https://github.com/5h0ov?tab=repositories"><u>Learn More</u></a>
                 </div>
             </div>
         </div>
