added new project

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/X">
+                <img src="images/shoobflix.png">
                 <div class="layer">
-                    <h3>X</h3>
-                    <p>X</p>
-                    <a href="X" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>ShoobFlix - A Video Streaming App</h3>
+                    <p>This is a clone version of Netflix Website using MERN Stack and Tailwind CSS.</p>
+                    <a href="https://github.com/5h0ov/ShoobFlix-MERN" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
