--- a/index.html
+++ b/index.html
@@ -224,5 +224,8 @@
         })
       </script>
       <!-- -------------contact form end-------------- -->
+
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   </body>
 </html>
+
